# mipt-labs-3

./: README.md  hello.py  pyproject.toml
1-1.3.1/: cheatsheet.md  main.ipynb  questions.md
2-3.3.4/: cheatsheet.md  main.ipynb
5-3.4.5/: cheatsheet.md  main.ipynb
6-3.2.4+3.2.5/: lab_osc_RLC.ipynb
6-3.2.4-3.2.5/: lab_osc_RLC.ipynb  lab_osc_theory_plots.ipynb
8-3.5.1/: cheatsheet.md  main.ipynb
